<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_detail_edit"
        android:title="@string/menu_item_edit"
        android:icon="@drawable/ic_edit"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_detail_delete"
        android:title="@string/menu_item_delete"
        android:icon="@drawable/ic_delete"
        app:showAsAction="ifRoom" />
</menu>